# Infoprop-JAX

./: .gitignore  Dockerfile  LICENSE  README.md  jobscript.sh  jobscript_.sh  jobscript_1.sh  jobscript_ant.sh  jobscript_humanoid.sh  jobscript_humanoid_race.sh  jobscript_nopmap.sh  jobscript_video.sh  jobscript_wheelbot.sh  pyproject.toml  setup.py
.github/prompts/: plan-compactWheelbotAgentState.prompt.md
infoprop_jax/: __init__.py  main.py
infoprop_jax/algorithms/: README.md  infoprop.py
infoprop_jax/config/: README.md  main.yaml
infoprop_jax/envs/: README.md  __init__.py  contract_validation.py  default_wrappable.py  infoprop_env.py  infoprop_wrappable_env.py
infoprop_jax/eval_scripts/: eval_utils.py  video_eval.py  video_eval_humanoid.py
infoprop_jax/training_scripts/: brax_infoprop_train.py
requirements/: requirements.txt
saved_tracks/: track_0.npz  track_1.npz  track_100.npz  track_101.npz  track_102.npz  track_104.npz  track_105.npz  track_106.npz  track_107.npz  track_109.npz  track_11.npz  track_110.npz  track_111.npz  track_112.npz  track_115.npz  track_117.npz  track_118.npz  track_120.npz  track_122.npz  track_124.npz  track_125.npz  track_126.npz  track_127.npz  track_128.npz  track_129.npz  track_131.npz  track_134.npz  track_136.npz  track_137.npz  track_140.npz  track_144.npz  track_146.npz  track_148.npz  track_15.npz  track_150.npz  track_151.npz  track_152.npz  track_155.npz  track_156.npz  track_157.npz  (+75 more)
wheelbot_sim_python/: __init__.py  main.py
wheelbot_sim_python/algorithms/: README.md  infoprop.py  infoprop_nopmap.py
(+139 files in other folders)
