[project]
name = "infoprop-jax"
version = "1.0"
description = "JAX/Brax implementation of Infoprop Dyna."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jax[cuda12]==0.8.0",
    "brax",
    "hydra-core",
    "mediapy",
    "shapely",
    "wandb",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["infoprop_jax*"]

[tool.setuptools.package-data]
infoprop_jax = [
    "envs/wheelbot/assets/mjcf/*.xml",
    "envs/wheelbot/assets/mjcf/mesh/*.stl",
    "envs/wheelbot/assets/track/saved_tracks/*.npz",
]
